-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 20
-
Component/s: hotspot
-
b13
On attached Fuzzer test:
$ build/linux-x86_64-server-fastdebug/images/jdk/bin/java -XX:-TieredCompilation -XX:+StressIGVN -Xcomp -XX:CompileOnly=Test -cp 0004/ Test
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/shade/trunks/jdk/src/hotspot/share/opto/phaseX.cpp:1162), pid=3177918, tid=3177931
# assert(false) failed: infinite loop in PhaseIterGVN::transform_old
Current CompileTask:
C2: 158 11 b Test::sMeth (250 bytes)
Stack: [0x00007fab2e4b4000,0x00007fab2e5b5000], sp=0x00007fab2e5af5a0, free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x17b3771] PhaseIterGVN::transform_old(Node*)+0x381
V [libjvm.so+0x17ac69e] PhaseIterGVN::optimize()+0x7e
V [libjvm.so+0xb2d8aa] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x6fa
V [libjvm.so+0xb2a3ac] Compile::Optimize()+0x47c
V [libjvm.so+0xb2c474] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x12a4
V [libjvm.so+0x9426cb] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x69b
V [libjvm.so+0xb3b708] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xac8
V [libjvm.so+0xb3c418] CompileBroker::compiler_thread_loop()+0x578
V [libjvm.so+0x1055ec0] JavaThread::thread_main_inner()+0x240
V [libjvm.so+0x1b7a374] Thread::call_run()+0x104
V [libjvm.so+0x172bd3c] thread_native_entry(Thread*)+0x10c
Bisection points toJDK-8289996.
$ build/linux-x86_64-server-fastdebug/images/jdk/bin/java -XX:-TieredCompilation -XX:+StressIGVN -Xcomp -XX:CompileOnly=Test -cp 0004/ Test
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/shade/trunks/jdk/src/hotspot/share/opto/phaseX.cpp:1162), pid=3177918, tid=3177931
# assert(false) failed: infinite loop in PhaseIterGVN::transform_old
Current CompileTask:
C2: 158 11 b Test::sMeth (250 bytes)
Stack: [0x00007fab2e4b4000,0x00007fab2e5b5000], sp=0x00007fab2e5af5a0, free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x17b3771] PhaseIterGVN::transform_old(Node*)+0x381
V [libjvm.so+0x17ac69e] PhaseIterGVN::optimize()+0x7e
V [libjvm.so+0xb2d8aa] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x6fa
V [libjvm.so+0xb2a3ac] Compile::Optimize()+0x47c
V [libjvm.so+0xb2c474] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x12a4
V [libjvm.so+0x9426cb] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x69b
V [libjvm.so+0xb3b708] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xac8
V [libjvm.so+0xb3c418] CompileBroker::compiler_thread_loop()+0x578
V [libjvm.so+0x1055ec0] JavaThread::thread_main_inner()+0x240
V [libjvm.so+0x1b7a374] Thread::call_run()+0x104
V [libjvm.so+0x172bd3c] thread_native_entry(Thread*)+0x10c
Bisection points to
- relates to
-
JDK-8289996 Fix array range check hoisting for some scaled loop iv
-
- Closed
-