src/hotspot/share/opto/mulnode.cpp
@@ -239,18 +239,16 @@ MulNode* MulNode::make(Node* in1, Node* in2, BasicType bt) {
 //------------------------------Ideal------------------------------------------
 // Check for power-of-2 multiply, then try the regular MulNode::Ideal
 Node *MulINode::Ideal(PhaseGVN *phase, bool can_reshape) {
-  // Swap constant to right
   jint con;
-  if ((con = in(1)->find_int_con(0)) != 0) {
-    swap_edges(1, 2);
-    // Finish rest of method to use info in 'con'
-  } else if ((con = in(2)->find_int_con(0)) == 0) {
+  if ((con = in(2)->find_int_con(0)) == 0) {
+    // Call MulNode::Ideal() for common transformations. After that,
+    // the constant input should be on the right side.
     return MulNode::Ideal(phase, can_reshape);
   }
 
-  // Now we have a constant Node on the right and the constant in con
-  if (con == 0) return NULL;   // By zero is handled by Value call
-  if (con == 1) return NULL;   // By one  is handled by Identity call
+  // Now we have a constant Node on the right and the constant in con.
+  // We can't find ZERO constant but it's handled by Value call.
+  if (con == 1) return NULL;   // By one is handled by Identity call
 
   // Check for negative constant; if so negate the final result
   bool sign_flip = false;
@@ -262,7 +260,7 @@ Node *MulINode::Ideal(PhaseGVN *phase, bool can_reshape) {
 
   // Get low bit; check for being the only bit
   Node *res = NULL;
-  unsigned int bit1 = abs_con & (0-abs_con);       // Extract low bit
+  unsigned int bit1 = submultiple_power_of_2(abs_con);
   if (bit1 == abs_con) {           // Found a power of 2?
     res = new LShiftINode(in(1), phase->intcon(log2i_exact(bit1)));
   } else {
@@ -336,16 +334,15 @@ const Type *MulINode::mul_ring(const Type *t0, const Type *t1) const {
 Node *MulLNode::Ideal(PhaseGVN *phase, bool can_reshape) {
   // Swap constant to right
   jlong con;
-  if ((con = in(1)->find_long_con(0)) != 0) {
-    swap_edges(1, 2);
-    // Finish rest of method to use info in 'con'
-  } else if ((con = in(2)->find_long_con(0)) == 0) {
+  if ((con = in(2)->find_long_con(0)) == 0) {
+    // Call MulNode::Ideal() for common transformations. After that,
+    // the constant input should be on the right side.
     return MulNode::Ideal(phase, can_reshape);
   }
 
-  // Now we have a constant Node on the right and the constant in con
-  if (con == CONST64(0)) return NULL;  // By zero is handled by Value call
-  if (con == CONST64(1)) return NULL;  // By one  is handled by Identity call
+  // Now we have a constant Node on the right and the constant in con.
+  // We can't find ZERO constant but it's handled by Value call.
+  if (con == CONST64(1)) return NULL;  // By one is handled by Identity call
 
   // Check for negative constant; if so negate the final result
   bool sign_flip = false;
@@ -356,7 +353,7 @@ Node *MulLNode::Ideal(PhaseGVN *phase, bool can_reshape) {
 
   // Get low bit; check for being the only bit
   Node *res = NULL;
-  julong bit1 = abs_con & (0-abs_con);      // Extract low bit
+  julong bit1 = submultiple_power_of_2(abs_con);
   if (bit1 == abs_con) {           // Found a power of 2?
     res = new LShiftLNode(in(1), phase->intcon(log2i_exact(bit1)));
   } else {
